# Alfodr

./: .gitignore  Alfodr.pc.in  AlfodrConfig.cmake  CMakeLists.txt  README.md
Alfodr/: Alfodr.h  Type.h
Alfodr/Tools/Chrono/: Chrono.cpp  Chrono.h
Alfodr/Types/: Interval.h
Alfodr/User/: Config.cpp  User.cpp
include/: Alfodr.h  Common.h
include/SoftwareManager/: ArgumentReader.h  SoftwareManager.h
include/SoftwareManager/User/: Logs.h  Setup.h  User.h
include/Tools/: Tools.h
include/Tools/CSV/: Column.h  FileCSV.h  Table.h
include/Tools/Chrono/: Chrono.h
include/Tools/JSON/: JSONFile.h  Objet.h  Pair.h  Value.h
include/Types/: Interval.h  Parameter.h  Types.h
include/Types/Geometry/: Geometry.h  Tuples.h
src/SoftwareManager/: ArgumentReader.cpp  SoftwareManager.cpp
src/SoftwareManager/User/: Logs.cpp  Setup.cpp  User.cpp
src/Tools/CSV/: Column.cpp  FileCSV.cpp  Table.cpp
src/Tools/Chrono/: Chrono.cpp
src/Tools/JSON/: JSONFile.cpp  Objet.cpp  Pair.cpp  Value.cpp
src/Types/: Interval.cpp  Parameter.cpp
